# AoC_2022

./: .clang-format  .clang-tidy  .cppcheck_suppressions_list  .gitignore  CMakeLists.txt  README.md  compile_and_analyze.sh  compile_and_benchmark.sh  compile_and_install.sh  compile_and_install_release.sh  compile_and_run.sh  compile_and_sanitize.sh  compile_and_test.sh  compile_test_and_benchmark.sh  main.cpp
.github/workflows/: convoluted_build_check.yml  convoluted_merge_attempt.yml
benchmark/: CMakeLists.txt  benchmark_Solutions.cpp
cmake/: clang_tidy.cmake  cppcheck.cmake  formatting.cmake  project_settings.cmake
conan/: conanfile.py  profile.txt  profile_debug.txt  profile_rel_with_deb_info.txt  profile_release.txt  profile_sanitize_address.txt  profile_sanitize_memory.txt  profile_sanitize_undefined_behaviour.txt
src/: CMakeLists.txt
src/Solutions/: CMakeLists.txt  CampCleanup.cpp  CampCleanup.hpp  ElfCalories.cpp  ElfCalories.hpp  NoSpace.cpp  NoSpace.hpp  RockPaperScissors.cpp  RockPaperScissors.hpp  RuckSack.cpp  RuckSack.hpp  RunSolution.cpp  RunSolution.hpp  SupplyStacks.cpp  SupplyStacks.hpp  TreetopTreeHouse.cpp  TreetopTreeHouse.hpp  TuningTrouble.cpp  TuningTrouble.hpp
src/Solutions/CampCleanup/: AssignmentPair.cpp  AssignmentPair.hpp  CMakeLists.txt  CampCleanup.cpp  CampCleanup.hpp
src/Solutions/CathodeRayTube/: CMakeLists.txt  CPU.cpp  CPU.hpp  CathodeRayTube.cpp  CathodeRayTube.hpp
src/Solutions/ElfCalories/: CMakeLists.txt  ElfCalories.cpp  ElfCalories.hpp  ElfInventory.cpp  ElfInventory.hpp
src/Solutions/NoSpace/: CMakeLists.txt  ChangeDir.cpp  ChangeDir.hpp  Command.hpp  Directory.cpp  Directory.hpp  File.hpp  List.cpp  List.hpp  NoSpace.cpp  NoSpace.hpp
src/Solutions/RockPaperScissors/: CMakeLists.txt  RockPaperScissors.cpp  RockPaperScissors.hpp  Round.cpp  Round.hpp
src/Solutions/RopeBridge/: CMakeLists.txt  Rope.cpp  Rope.hpp  RopeBridge.cpp  RopeBridge.hpp
src/Solutions/RuckSack/: CMakeLists.txt  CheckRuckSacks.cpp  CheckRuckSacks.hpp  RuckSack.cpp  RuckSack.hpp  RuckSackGroup.cpp  RuckSackGroup.hpp
src/Solutions/SupplyStacks/: CMakeLists.txt  MoveCommand.cpp  MoveCommand.hpp  SupplyStack.cpp  SupplyStack.hpp  SupplyStacks.cpp  SupplyStacks.hpp
src/Solutions/TreetopTreeHouse/: CMakeLists.txt  Forest.cpp  Forest.hpp  TreetopTreeHouse.cpp  TreetopTreeHouse.hpp
src/Solutions/TuningTrouble/: CMakeLists.txt  TuningTrouble.cpp  TuningTrouble.hpp
src/Utils/: CMakeLists.txt  Definitions.hpp  Utils.hpp
src/Utils/Coordinates/: Coordinates2D.hpp
src/Utils/DataBroker/: DataBroker.cpp  DataBroker.hpp  TestDataGenerator.cpp  TestDataGenerator.hpp
src/Utils/PrettyPrint/: PrettyPrint.cpp  PrettyPrint.hpp
src/Utils/SelectSolution/: SelectSolution.cpp  SelectSolution.hpp
test/: CMakeLists.txt
test/src/: test_Solutions.cpp
